Measure NullAway against the Nullness Checker on one corpus
Both run as Error Prone checks over Caffeine 3.0.2, same JVM, same javac, so
the check is the only variable; each verified live on a shared control, and
NullAway verified non-inert by a second control with no annotated packages.

The analysis costs +0.22s for NullAway and +18.25s for the full Nullness
Checker on 575 files.  The tools are not doing the same work -- NullAway
reported nothing, the Nullness Checker 100 findings, 47 of them nullness
through generic type arguments -- so the ratio is what a build feels, not a
like-for-like.

The result worth acting on is the decomposition: -AassumeKeyFor removes 22%
of the cost and -AassumeInitialized 44%, together 65%, with the findings
unchanged.  PR #1998's -Amode=jspecify sets exactly those and is documented
as a compatibility mode rather than as the largest performance option the
Nullness Checker has.

Also retracts the earlier "cost is nearly fixed" hypothesis, which does not
hold on third-party code.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019jLjeEW1F1aE2E3ax7EWqV